--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -23,6 +23,7 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{pgfplots}
+\pgfplotsset{compat=newest}
 \usepackage{wasysym}
 \usepackage[symbol]{footmisc}
 \usepackage{float}
@@ -46,10 +47,10 @@
 \author{Sebastian Bittel, Vitali Kaiser, Marvin Teichmann, Martin Thoma}
 
 \hypersetup{
-	pdfauthor   = {Sebastian Bittel\sep Vitali Kaiser\sep Marvin Teichmann\sep Martin Thoma},
-	pdfkeywords = {recognition\sep machine learning\sep neural networks\sep classification\sep multilayer perceptron\sep deep learning},
-	pdfsubject  = {Recognition},
-	pdftitle    = {Pixel-wise Segmentation of Street with Neural Networks},
+    pdfauthor   = {Sebastian Bittel\sep Vitali Kaiser\sep Marvin Teichmann\sep Martin Thoma},
+    pdfkeywords = {recognition\sep machine learning\sep neural networks\sep classification\sep multilayer perceptron\sep deep learning},
+    pdfsubject  = {Recognition},
+    pdftitle    = {Pixel-wise Segmentation of Street with Neural Networks},
 }
 
 
@@ -75,4 +76,5 @@
 
 \bibliographystyle{IEEEtranSA}
 \bibliography{pixel-wise-street-segmentation}
+%\printglossary
 \end{document}
