--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -1,5 +1,5 @@
 \documentclass[technote,a4paper,leqno]{IEEEtran}
-\usepackage{amssymb, amsmath} % needed for math
+\usepackage{amssymb, amsmath}
 
 
 \usepackage[a-1b]{pdfx}
@@ -29,7 +29,6 @@
 \usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
-% \captionsetup{belowskip=12pt,aboveskip=4pt}
 \makeatletter
 \newcommand\mynobreakpar{\par\nobreak\@afterheading}
 \makeatother
@@ -59,9 +58,6 @@
 
 \usepackage{microtype}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Begin document                                                    %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
 \input{abstract}
@@ -72,7 +68,6 @@
 \input{ch4-our-model}
 \input{ch7-results}
 \input{ch8-discussion}
-% \clearpage
 
 \bibliographystyle{IEEEtranSA}
 \bibliography{pixel-wise-street-segmentation}
