Add equal contribution notice

--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -40,10 +40,13 @@
 \usepackage{glossaries}
 \loadglsentries[main]{glossary}
 \makeglossaries
-\usepackage{footnote}
 
 \title{Pixel-wise Segmentation of Street with Neural Networks}
-\author{Sebastian Bittel, Vitali Kaiser, Marvin Teichmann, Martin Thoma}
+\author{%
+\makebox[.4\linewidth]{Sebastian Bittel\thanks{\IEEEauthorrefmark{1} These authors contributed equally to this work}\IEEEauthorrefmark{1}}
+\and \makebox[.4\linewidth]{Vitali Kaiser\IEEEauthorrefmark{1}}\\
+\and \makebox[.4\linewidth]{Marvin Teichmann\IEEEauthorrefmark{1}}
+\and \makebox[.4\linewidth]{Martin Thoma\IEEEauthorrefmark{1}}} % ORCID: http://orcid.org/0000-0002-6517-1690
 
 \hypersetup{
     pdfauthor   = {Sebastian Bittel\sep Vitali Kaiser\sep Marvin Teichmann\sep Martin Thoma},
